# vr_splatting

./: .gitmodules  CMakeLists.txt  README.md
cmake/: FindOpenVR.cmake  FindSRanipal.cmake
configs/: trips_gs_stp_gs.ini
loss/getlosses/: pytorch_msssim.py  trace_vggs.py
parameter/: optimization_params.json  stp_config.json  stp_config_cp.json  stp_config_stp.json
src/: README_WINDOWS.md
src/apps/: CMakeLists.txt  TrainScene.cpp  TrainScene.h  UserStudy.cpp  UserStudy.h  adop2colmap.cpp  adop_vr_viewer.cpp  train.cpp  viewer.cpp  viewer_base.h
src/lib/: CMakeLists.txt
src/lib/data/: Dataset.cpp  Dataset.h  NeuralScene.cpp  NeuralScene.h  NeuralStructure.cpp  NeuralStructure.h  OptionalTensorBoardLogger.cpp  OptionalTensorBoardLogger.h  SceneData.cpp  SceneData.h  Settings.cpp  Settings.h
src/lib/fovea/: cie_lab_color.cpp  cie_lab_color.h  fovea_combine.cu  fovea_combine.h
src/lib/gaussian/: gaussian.cu  gaussian.cuh  general_utils.cuh  parameters.cu  parameters.cuh  rasterize_points.cu  rasterize_points.h  rasterizer.cu  rasterizer.cuh  read_utils.h  render_utils.cuh  sh_utils_gs.cuh
src/lib/gaussian/cuda_rasterizer/: STP_settings.h  auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu
src/lib/gaussian/cuda_rasterizer/stopthepop/: hierarchical_render.cuh
src/lib/gaussian/simple-knn/: simple_knn.cu  spatial.cu  spatial.h
src/lib/models/: MyAdam.cu  MyAdam.h  Networks.h  NeuralCamera.cpp  NeuralTexture.h  Pipeline.cpp  Pipeline.h  spherical_harmonics.cpp  spherical_harmonics.h
src/lib/opengl/: EyeTracking.cpp  EyeTracking.h  RealTimeRenderer.cpp  RealTimeRenderer.h  TrainLiveViewer.cpp  TrainLiveViewer.h
src/lib/rendering/: NeuralPointCloudCuda.cpp  NeuralPointCloudCuda.h  PointRenderer.cu  PointRenderer.h  PointRendererHelper.h  RenderBackward.cu  RenderConstants.h  RenderForward.cu  RenderInfo.cpp  RenderInfo.h  RenderModule.cpp
src/tests/: CMakeLists.txt  numerical_testing.h  test_alpha_blend.cpp  test_alpha_blend2.cpp  test_alpha_list_sort.cu  test_grad_oct.cpp  test_loss.cpp  test_ocam.cpp  test_random_sampling.cpp  test_renderer.cpp  test_tcnn.cu
